k8s/production/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: downloora-queue
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: downloora-queue
      app.kubernetes.io/part-of: downloora
  template:
    metadata:
      labels:
        app.kubernetes.io/name: downloora-queue
        app.kubernetes.io/part-of: downloora
    spec:
      containers:
        - name: queue
          image: downloora-app
          imagePullPolicy: IfNotPresent
          command:
            - php
            - artisan
            - queue:work
            - --sleep=1
            - --tries=3
            - --timeout=3600
          volumeMounts:
            - name: private-storage
              mountPath: /var/www/html/storage/app/private
            - name: qbittorrent-downloads
              mountPath: /var/www/html/storage/app/private/qbittorrent
      volumes:
        - name: private-storage
          persistentVolumeClaim:
            claimName: downloora-private-storage
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
