k8s/production/qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: downloora
  ports:
    - name: webui
      port: 8080
      targetPort: webui
    - name: torrent-tcp
      port: 6881
      targetPort: torrent-tcp
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: torrent-udp
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-peers
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: downloora
  ports:
    - name: torrent-tcp
      port: 6881
      targetPort: torrent-tcp
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: torrent-udp
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
      app.kubernetes.io/part-of: downloora
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/part-of: downloora
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: webui
              containerPort: 8080
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          readinessProbe:
            httpGet:
              path: /
              port: webui
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: qbittorrent-downloads
              mountPath: /downloads
            - name: qbittorrent-config-file
              mountPath: /config/qBittorrent/qBittorrent.conf
              subPath: qBittorrent.conf
      volumes:
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: qbittorrent-config-file
          configMap:
            name: qbittorrent-config
