k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: downloora
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - downloora.example.com
      secretName: downloora-tls
  rules:
    - host: downloora.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: downloora-app
                port:
                  name: http
